changed the content body spacing at the top and applied fixed top to navbar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -181,7 +181,7 @@ button:hover {
 }
 
 .contentBody {
-  margin-top: 0.5rem;
+  margin-top: 4.5rem;
   margin-bottom: 2rem;
 }
 .contentBody .card {
